# chanio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chanio/: __init__.py  _channel.py  _exceptions.py  _select.py
tests/: conftest.py  test_channel.py
