[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chanio"
dynamic = ["version"]
description = "Select and CSP combinators for AnyIO"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  { name = "Dimitris Papaevagelou", email = "dimitris.papaevagelou@andefined.com" },
]
keywords = [
  "asyncio",
  "trio",
  "anyio",
  "channel",
  "csp",
  "select",
  "concurrency",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Framework :: AnyIO",
]
dependencies = ["anyio>=4.0"]

[project.urls]
Homepage = "https://github.com/andefined/chanio"
Repository = "https://github.com/andefined/chanio"
Issues = "https://github.com/andefined/chanio/issues"

[project.optional-dependencies]
trio = ["trio>=0.25"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "anyio[trio]>=4.0",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/chanio/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chanio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
strict = true
python_version = "3.11"
